<resources>
    <string name="app_name">Layout</string>
    <string name="checkbox_4">CheckBox 4</string>
    <string name="checkbox_1">CheckBox 1</string>
    <string name="this_is_my_first_layout_project">This is my first layout project</string>
    <string name="button3">Button3</string>
    <string name="button2">Button2</string>
    <string name="button1">Button1</string>
    <string name="checkbox_2">CheckBox 2</string>
    <string name="checkbox_6">CheckBox 6</string>
    <string name="checkbox_3">CheckBox 3</string>
    <string name="checkbox_5">CheckBox 5</string>
    <string name="todo">TODO</string>
</resources>